[Add] Adicionando arquivo YML para publicar em Produção

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,16 +1,1 @@
-spring.profiles.active=dev
-server.servlet.context-path=/laboratorio
-server.port=8080
-
-spring.jpa.database=POSTGRESQL
-spring.datasource.platform=postgres
-spring.jpa.show-sql=true
-spring.jpa.open-in-view=true
-spring.jpa.hibernate.ddl-auto=none
-spring.jpa.properties.hibernate.default_schema=escola
-spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.username=postgres
-spring.datasource.password=postgres
-spring.datasource.url=jdbc:postgresql://localhost:5432/?currentSchema=escola
-
-spring.jackson.serialization.fail-on-empty-beans=false
+spring.profiles.active=@activatedProperties@
