--- a/pom.xml
+++ b/pom.xml
@@ -7,17 +7,39 @@
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>2.4.4</version>
-		<relativePath /> <!-- lookup parent from repository -->
+		<relativePath />
 	</parent>
-	<groupId>com.cni</groupId>
+	<groupId>com.escola</groupId>
 	<artifactId>laboratorio</artifactId>
 	<version>0.1</version>
 	<name>laboratorio</name>
-	<description>Demo project for Spring Boot</description>
+	<description>Projeto Exemplo para Spring Boot</description>
 	<properties>
 		<java.version>1.8</java.version>
 		<io.springfox.version>3.0.0</io.springfox.version>
 	</properties>
+
+	<profiles>
+		<profile>
+			<id>dev</id>
+			<properties>
+				<activatedProperties>dev</activatedProperties>
+			</properties>
+			<activation>
+				<activeByDefault>true</activeByDefault>
+			</activation>
+		</profile>
+		<profile>
+			<id>prod</id>
+			<properties>
+				<activatedProperties>prod</activatedProperties>
+			</properties>
+			<activation>
+				<activeByDefault>false</activeByDefault>
+			</activation>
+		</profile>
+	</profiles>
+
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -47,7 +69,6 @@
 		</dependency>
 
 		<!-- Swagger -->
-		<!-- Para Swagger -->
 		<dependency>
 			<groupId>io.springfox</groupId>
 			<artifactId>springfox-swagger2</artifactId>
@@ -74,7 +95,7 @@
 			<version>${io.springfox.version}</version>
 		</dependency>
 
-
+		<!-- Teste -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
@@ -90,5 +111,4 @@
 			</plugin>
 		</plugins>
 	</build>
-
 </project>
