[Add] Testes Unitários, Converters, DTO e correções

--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,8 @@
 	<description>Projeto Exemplo para Spring Boot</description>
 	<properties>
 		<java.version>1.8</java.version>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<start-class>com.escola.LaboratorioApplication</start-class>
 		<io.springfox.version>3.0.0</io.springfox.version>
 	</properties>
 
@@ -99,6 +101,17 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
+			<scope>test</scope>
+			<exclusions>
+				<exclusion>
+					<groupId>junit</groupId>
+					<artifactId>junit</artifactId>
+				</exclusion>
+			</exclusions>
+		</dependency>
+		<dependency>
+			<groupId>org.junit.jupiter</groupId>
+			<artifactId>junit-jupiter-engine</artifactId>
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
