--- a/pom.xml
+++ b/pom.xml
@@ -36,9 +36,6 @@
 			<properties>
 				<activatedProperties>prod</activatedProperties>
 			</properties>
-			<activation>
-				<activeByDefault>false</activeByDefault>
-			</activation>
 		</profile>
 	</profiles>
 
@@ -113,6 +110,11 @@
 			<groupId>org.junit.jupiter</groupId>
 			<artifactId>junit-jupiter-engine</artifactId>
 			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-configuration-processor</artifactId>
+			<optional>true</optional>
 		</dependency>
 	</dependencies>
 
